--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 <h2>My official Site</h2>
-This is my new site...
+This is my new site...<br>
+  with some text ☺
 </body>
 </html>
