--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
 <body>
 <h2>My official Site</h2>
-This is my new site...<br>
-  with some text ☺
+Design Template from freepik.com:
+<img src='1387.jpg' alt='design template'/><br>
+<a href="http://www.freepik.com">Designed by eightonesix / Freepik</a>
 </body>
 </html>
