--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <h2>My official Site</h2>
 Design Template from freepik.com:
-<img src='1387.jpg' alt='design template'/><br>
+<img style='width: 100%;' src='1387.jpg' alt='design template'/><br>
 <a href="http://www.freepik.com">Designed by eightonesix / Freepik</a>
 </body>
 </html>
