--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 <h2>My official Site</h2>
+  <a href='cv.html'>CV</a>
 Design Template from freepik.com:<br>
 <img style='width: 800px;' src='1387.jpg' alt='design template'/><br>
 <a href="http://www.freepik.com">Designed by eightonesix / Freepik</a>
