--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,7 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<link rel='stylesheet' href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css"/>
 </head>
 <style>
 :root {
@@ -14,6 +15,15 @@
   --hauptfarbe2: #057dcb;
   --hauptfarbe3: #1e2834;
   --grey: #e5e5e5;
+  --navy: #001f3f;
+  --blue: #0074D9;
+  --lime: #01ff70;
+  --orange: #ff851b;
+  --maroon: #85144b;
+  --red: #ff4136;
+  --fuchsia: #f012be;
+  --olive: #3d9970;
+  --teal: #39cccc;
 }
 html{
     font-family: "Montserrat", sans-serif;
@@ -55,8 +65,8 @@ hr{
 #mainwindow{
     width: 60%;
     height: auto;
-    margin: 5% auto 0 auto;
-    //background-color: var(--grey);
+    margin: 5% auto 5% auto;
+    background-color: white;
 }
 #middle{
 
@@ -97,13 +107,13 @@ hr{
 }
 #rightwindow{
     display: inline-block;
+    background-color: var(--grey);
     float:left;
     width: 30%;
-    height: 100%;
     box-shadow: -10px 0 50px #b4b5b7;
 }
 #rightwindow>div{
-    padding-left: 10%;
+    //padding-left: 10%;
 }
 #rightwindow>img{
     width: 100%;
@@ -112,15 +122,22 @@ hr{
 #footer{
     display: inline-block;
     width: 100%;
+    text-align:center;
     color: white;
     background-color: var(--hauptfarbe3);
 }
 .contact{
     height: 10%;
+    padding: 5% auto 5% auto;
+    text-align: center;
+    padding-top: 10%;
     color: #fff;
 }
 .phone{
     background-color: var(--hauptfarbe3);
+}
+.phone:before{
+    content: "ICON";
 }
 .website{
     background-color: var(--hauptfarbe2);
@@ -130,6 +147,7 @@ hr{
 }
 .con{
     text-transform: uppercase;
+    margin: 10% auto 10% auto;
 }
 .progress{
     margin-left: 20%;
@@ -185,9 +203,23 @@ hr{
             <div class="con">
                 Skills  <br /><br />
                 <div class="skill">
-                <div style="float:left;">HTML</div>
+                    <div style="float:left;">HTML</div>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" style="width:60%">
+                          <div class="progress-bar" role="progressbar" style="width:80%;background: var(--maroon);">
+                          </div>
+                        </div>
+                </div>
+                <div class="skill">
+                    <div style="float:left;">CSS</div>
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width:60%;background: var(--teal);">
+                          </div>
+                        </div>
+                </div>
+                <div class="skill">
+                    <div style="float:left;">PHP</div>
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width:70%;background: var(--fuchsia);">
                           </div>
                         </div>
                 </div>
@@ -203,7 +235,7 @@ hr{
         </div>
     </div>
     <div id="footer">
-        Â© by Remy Scherer 2017
+        © by Remy Scherer 2017
     </div>
 </div>
 </body>
