--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,6 @@
 <head>
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"> 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
@@ -8,184 +9,16 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link rel='stylesheet' href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css"/>
+<link rel="stylesheet" href="styles.css"/>
 <script src="https://use.fontawesome.com/1a6a79c267.js"></script>
 </head>
-<style>
-:root {
-  --hauptfarbe: #01baf0;
-  --hauptfarbe2: #057dcb;
-  --hauptfarbe3: #1e2834;
-  --grey: #e5e5e5;
-  --navy: #001f3f;
-  --blue: #0074D9;
-  --lime: #01ff70;
-  --orange: #ff851b;
-  --maroon: #85144b;
-  --red: #ff4136;
-  --fuchsia: #f012be;
-  --olive: #3d9970;
-  --teal: #39cccc;
-}
-html{
-    font-family: "Montserrat", sans-serif;
-}
-body{
-/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+0,0.65+100 */
-background: -moz-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%, rgba(0,0,0,0.35) 100%); /* FF3.6-15 */
-background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%,rgba(0,0,0,0.35) 100%); /* Chrome10-25,Safari5.1-6 */
-background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0.35) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-}
-h1 {
-    margin-top: 0;
-    margin-bottom: 0;
-    text-transform: uppercase;
-    font-size: 3vw;
-}
-h3.job {
-  margin-top: 0;
-  font-size: 2.5vw;
-}
-h2.article{
-    margin-top: 0;
-    background-color: var(--grey);
-    font-size: 2vw;    
-    padding: 1vw;
-    padding-right: 5vw;
-    text-transform: uppercase;
-    font-weight: bold;
-}
-hr{
-    border-color: var(--hauptfarbe);
-    background-color: var(--hauptfarbe);
-    border-width: 1px;
-    border-style: solid;
-}
-#mainwindow{
-    width: 60vw;
-    height: auto;
-    margin: 10vw auto 10vw auto;
-    background-color: white;
-    font-size: 1.5vw;
-}
-#leftwindow{
-    background-color: #FFFFFF;
-    display: inline-block;
-    float:left;
-    width: 42vw;
-    text-align: right;
-}
-#leftwindow>div{
-    padding: 0 3vw;
-}
-.job{
-    text-transform: uppercase;
-}
-.fcolor1{
-    color: var(--hauptfarbe);
-}
-.bgcolor1{
-    background-color: var(--hauptfarbe);
-}
-.fcolor2{
-    color: var(--hauptfarbe2);
-}
-.bgcolor2{
-    background-color: var(--hauptfarbe2);
-}
-.fcolor3{
-    color: var(--hauptfarbe3);
-}
-.bgcolor3{
-    background-color: var(--hauptfarbe3);
-}
-#leftwindow>#Name{
-    font-size: 1.5vw;
-}
-#leftwindow>#Name>h1{
-    padding-top: 10vw; 
-    font-weight: bold;
-}
-#rightwindow{
-    display: inline-block;
-    display: block;
-    background-color: var(--grey);
-    float:left;
-    width: 18vw;
-    box-shadow: -1vw 0 5vw #b4b5b7;
-}
-#rightwindow>img{
-    width: 100%;
-    display:block;
-}
-#footer{
-    display: inline-block;
-    width: 60vw;
-    text-align:center;
-    color: white;
-    background-color: var(--hauptfarbe3);
-}
-.contact{
-    height: 5vw;
-    font-size: 1vw;
-}
-.contact>span{
-    float:left;
-    text-align: center;
-    color: #fff;
-    padding-top: 10%;
-    margin-left: 10%;
-}
-.contactform{  
-    float: left; 
-    color: black; 
-    height: 5vw;
-    width: 3.5vw;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-box-shadow: inset -1vw 0vw 1vw 0vw rgba(0,0,0,0.5);
-    -moz-box-shadow: inset -1vw 0vw 1vw 0vw rgba(0,0,0,0.5);
-    box-shadow: inset -1vw 0vw 1vw 0vw rgba(0,0,0,0.5);
-}
-.contactform>i{
-    /*background: #fff;    
-    height:2.5vw;
-    width: 2.5vw; 
-    border-radius: 50%;
-    padding: 5px;*/
-    
-    padding-top: 1.5vw;
-    color: #fff;
-    display: block;
-    text-align: center;
-    font-size: 2vw;
-}
-.phone{
-    background-color: var(--hauptfarbe3);
-}
-.phone:before{
-    content: "";
-}
-.website{
-    background-color: var(--hauptfarbe2);
-}
-.email{
-    background-color: var(--hauptfarbe);
-}
-.con{
-    text-transform: uppercase;
-    margin: 10% auto 10% auto;
-    padding-left: 10%;
-}
-.progress{
-    margin-left: 20%;
-    margin-right: 10%;
-}
-</style>
 <body>
 <div id='mainwindow'>
     <div>
         <div id='leftwindow'>
+            <div class="logo">
+                <img src="http://www.vectorsland.com/imgd/l64322-rs-ford-focus-logo-34382.png"/>
+            </div>
             <div id="Name">
                 <h1>Remy Scherer</h1>
                 <h3 class="job fcolor1">Developer</h3>
@@ -218,25 +51,33 @@ hr{
         </div>
         <div id='rightwindow'>
             <img src='https://avatars1.githubusercontent.com/u/27846555'/>
+            <a href="#">
             <div class="contact phone">
-                <div class="contactform">
-                    <i class='fa fa-phone' aria-hidden='true'></i>
-                </div>
-                <span>0176 XXXXXXX</span>
+                <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle-thin fa-stack-2x"></i>
+                    <i class="fa fa-phone fa-stack-1x"></i>
+                </span>
+                <span> 0176 XXXXXXX</span>
             </div>
+            </a>
+            <a href='http://remyscherer.github.io'>
             <div class="contact website">
-                <div class="contactform">
-                   <i class='fa fa-globe' aria-hidden='true'></i>
-                </div>
-                <span>remyscherer.github.io</span>
+                <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle-thin fa-stack-2x"></i>
+                    <i class="fa fa-globe fa-stack-1x"></i>
+                </span>
+                <span> remyscherer.github.io</span>
             </div>
-
+            </a>
+            <a href='mailto:remy@scherer.de'>
             <div class="contact email">
-                <div class="contactform">
-                    <i class='fa fa-envelope-o' aria-hidden='true'></i>
-                </div>
-                <span>remy@scherer.de</span>
+                <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle-thin fa-stack-2x"></i>
+                    <i class="fa fa-envelope fa-stack-1x"></i>
+                </span>
+                <span> remy@scherer.de</span>
             </div>
+            </a>
             <div class="con">
                 Skills  <br /><br />
                 <div class="skill">
